<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="-2dp"
    tools:layout_editor_absoluteY="0dp">

    <View
        android:id="@+id/barra2"
        android:layout_width="412dp"
        android:layout_height="120dp"
        android:layout_below="@id/textPregunta"
        android:background="#EBD6FF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textTituloPregunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:text="@string/textPregunta"
        android:textColor="#833AB7"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Chronometer
        android:id="@+id/cronometro"
        android:layout_width="73dp"
        android:layout_height="29dp"
        android:layout_marginStart="4dp"
        android:textColor="#833AB7"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textPregunta"
        app:layout_constraintEnd_toStartOf="@+id/wrongDotNumber"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toEndOf="@+id/textTituloPregunta"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textPregunta"
        android:layout_width="355dp"
        android:layout_height="65dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:autoSizeTextType="uniform"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTituloPregunta" />

    <View
        android:id="@+id/barra"
        android:layout_width="match_parent"
        android:layout_height="13dp"
        android:layout_below="@id/textPregunta"
        android:background="#833AB7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barra2" />

    <RadioGroup
        android:id="@+id/opciones"
        android:layout_width="390dp"
        android:layout_height="219dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="14dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barra">

        <RadioButton
            android:id="@+id/opcionA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Opcion 1" />

        <RadioButton
            android:id="@+id/opcionB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Opcion 2" />

        <RadioButton
            android:id="@+id/opcionC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Opcion 3" />

        <RadioButton
            android:id="@+id/opcionD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Opcion 4" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonSiguiente"
        android:layout_width="128dp"
        android:layout_height="64dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="210dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="85dp"
        android:backgroundTint="#833AB7"
        android:text="@string/buttonSiguiente"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.906"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/opciones"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonAnterior"
        android:layout_width="126dp"
        android:layout_height="72dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="112dp"
        android:backgroundTint="#833AB7"
        android:text="@string/buttonAnterior"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/opciones" />

    <VideoView
        android:id="@+id/videoPregunta"
        android:layout_width="385dp"
        android:layout_height="207dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/opciones" />

    <ImageView
        android:id="@+id/imagenPregunta"
        android:layout_width="389dp"
        android:layout_height="213dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/opciones"
        app:srcCompat="@drawable/hulk" />

    <ImageButton
        android:id="@+id/r1"
        android:layout_width="186dp"
        android:layout_height="138dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="15dp"
        android:adjustViewBounds="true"
        android:backgroundTint="#00FFFFFF"
        android:scaleType="fitCenter"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/r0"
        app:layout_constraintTop_toBottomOf="@+id/barra"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <TextView
        android:id="@+id/textImagen3"
        android:layout_width="34dp"
        android:layout_height="61dp"
        android:layout_marginStart="88dp"
        android:text="3"
        android:textColor="#833AB7"
        android:textSize="48sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/r2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/r0"
        app:layout_constraintVertical_bias="0.677" />

    <ImageButton
        android:id="@+id/r3"
        android:layout_width="186dp"
        android:layout_height="138dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="15dp"
        android:adjustViewBounds="true"
        android:backgroundTint="#00FFFFFF"
        android:scaleType="fitCenter"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/r2"
        app:layout_constraintTop_toBottomOf="@+id/r1"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ImageButton
        android:id="@+id/r0"
        android:layout_width="186dp"
        android:layout_height="138dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:adjustViewBounds="true"
        android:backgroundTint="#00FFFFFF"
        android:scaleType="fitCenter"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barra"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <TextView
        android:id="@+id/textImagen4"
        android:layout_width="37dp"
        android:layout_height="59dp"
        android:layout_marginEnd="80dp"
        android:text="4"
        android:textColor="#833AB7"
        android:textSize="48sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/r3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/r1"
        app:layout_constraintVertical_bias="0.696" />

    <TextView
        android:id="@+id/textImagen2"
        android:layout_width="37dp"
        android:layout_height="59dp"
        android:layout_marginEnd="76dp"
        android:text="2"
        android:textColor="#833AB7"
        android:textSize="48sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/r1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barra"
        app:layout_constraintVertical_bias="0.976" />

    <TextView
        android:id="@+id/textImagen1"
        android:layout_width="25dp"
        android:layout_height="59dp"
        android:layout_marginStart="88dp"
        android:text="1"
        android:textColor="#833AB7"
        android:textSize="48sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/r0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barra"
        app:layout_constraintVertical_bias="0.976" />

    <ImageButton
        android:id="@+id/r2"
        android:layout_width="186dp"
        android:layout_height="138dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="92dp"
        android:adjustViewBounds="true"
        android:backgroundTint="#00FFFFFF"
        android:scaleType="fitCenter"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/r0"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ImageButton
        android:id="@+id/buttonPlaySound"
        android:layout_width="110dp"
        android:layout_height="76dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#833AB7"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageSound"
        app:srcCompat="@android:drawable/ic_media_play" />

    <ImageView
        android:id="@+id/imageSound"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="188dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="191dp"
        android:background="#833AB7"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.411"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/opciones"
        app:srcCompat="@android:drawable/ic_lock_silent_mode_off" />

    <ImageButton
        android:id="@+id/buttonPlayVideo"
        android:layout_width="77dp"
        android:layout_height="63dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="220dp"
        android:layout_marginBottom="85dp"
        android:backgroundTint="#833AB7"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/videoPregunta"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_media_play" />

    <ImageButton
        android:id="@+id/buttonPauseVideo"
        android:layout_width="76dp"
        android:layout_height="63dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="85dp"
        android:backgroundTint="#833AB7"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonPlayVideo"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/videoPregunta"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_media_pause" />

    <ImageView
        android:id="@+id/wrongDotNumber"
        android:layout_width="29dp"
        android:layout_height="20dp"
        android:layout_marginTop="24dp"
        android:tint="#CA1515"
        app:layout_constraintEnd_toStartOf="@+id/wrongQCounter"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textTituloPregunta"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/presence_invisible" />

    <ImageView
        android:id="@+id/correctDotNumber"
        android:layout_width="22dp"
        android:layout_height="20dp"
        android:layout_marginTop="24dp"
        android:tint="#5ACA15"
        app:layout_constraintEnd_toStartOf="@+id/correctQCounter"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/presence_invisible" />

    <TextView
        android:id="@+id/correctQCounter"
        android:layout_width="27dp"
        android:layout_height="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="10dp"
        android:text="TextView"
        android:textColor="#833AB7"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/wrongQCounter"
        android:layout_width="29dp"
        android:layout_height="20dp"
        android:layout_marginTop="24dp"
        android:text="TextView"
        android:textColor="#833AB7"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/correctDotNumber"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>